---------------------------------------------------------------------------------------------------
Version: 0.12.2
Date: ????
  Changes:
    - [queue] Renamed functions to be much more clear, updated types to use generics
    - Updated types to work with recent FMTK releases
  Bugfixes:
    - [dictionary-lite] Fixed an occasional crash related to Lua memory management internals
---------------------------------------------------------------------------------------------------
Version: 0.12.1
Date: 2022-12-06
  Bugfixes:
    - [dictionary-lite] Fixed a crash when re-requesting a missed translation batch
---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: 2022-12-06
  Features:
    - Added 'bounding-box' module
      - A cleaned up version of the 'area' module that treats bounding boxes as immutable and does not use metatables
      - Since the cleanup was a breaking change, a new module was created
    - Added 'dictionary-lite' module
      - Takes advantage of new Factorio API features to drastically simplify the process
      - Increases translation speed in singleplayer by a factor of 10
    - Added 'format' module with various string formatting functions
    - Added 'gui-lite' module
      - Removes redundant features, simplifies the building process, and enhances type-checking and autocomplete
    - Added 'migration.handle_on_configuration_changed()'
    - Added 'position' module with various position manipulation functions
  Changes:
    - Changed preferred require syntax to '/' instead of '.'
    - Deprecated 'area' module in favor of the 'bounding-box' module
    - Deprecated 'dictionary' module in favor of the 'dictionary-lite' module
    - Deprecated 'event' module - type checking did not work and it didn't provide much over using 'script' directly
    - Deprecated 'gui' module in favor of the 'gui-lite' module